<<<<<<< HEAD
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:tools="http://schemas.android.com/tools"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:paddingTop="@dimen/activity_vertical_margin"
            android:paddingBottom="@dimen/activity_vertical_margin"
            android:background="@drawable/border"
            tools:context="com.brendan_and_eric.datecounter.AddActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/edit_text"
            android:textSize="18sp"
            android:paddingBottom="18dp"/>
        <TextView
            android:text="Name"
            android:id="@+id/nameTitle2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Enter a new Event"
            android:textColorHint="@android:color/darker_gray"
            android:id="@+id/editNameText2"
            android:layout_toRightOf="@id/nameTitle2"
            />
        <TextView
            android:text="Type of Event is a"
            android:layout_marginTop="20dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            />
        <TextView
            android:id="@+id/eventTitle2"
            android:textSize="20dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            />
        <TextView
            android:text="Select a Date"
            android:layout_marginTop="20dp"
            android:id="@+id/dateTitle2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <DatePicker android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/Date2"
            ></DatePicker>
        <!--<TextView-->
        <!--android:text="Set Update Notification"-->
        <!--android:id="@+id/notificationTitle"-->
        <!--android:layout_marginTop="20dp"-->
        <!--android:layout_width="wrap_content"-->
        <!--android:layout_height="wrap_content"/>-->

        <!--<Spinner-->
        <!--android:id="@+id/dialog_Notification_picker"-->
        <!--android:layout_width="wrap_content"-->
        <!--android:layout_height="wrap_content"-->
        <!--/>-->
        <Button
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/add_edit"
            android:layout_alignParentBottom="true"
            android:onClick="addItem"
            />
        <Button
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/cancel"
            android:layout_alignParentBottom="true"
            android:onClick="closeWindow"
            />

    </LinearLayout>
</ScrollView>
=======
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_horizontal_margin"
                android:paddingTop="@dimen/activity_vertical_margin"
                android:paddingBottom="@dimen/activity_vertical_margin"
                android:orientation="vertical"
                tools:context="com.brendan_and_eric.datecounter.PopupActivity"
                android:background="@drawable/border">

    <TextView
        android:text="@string/popup_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"/>

    <Button
        android:id="@+id/edit_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/edit"/>

    <Button
        android:id="@+id/delete_button"
        android:onClick="deleteItem"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/delete"/>

    <Button
        android:id="@+id/cancel_button2"
        android:onClick="close"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/cancel"/>

</LinearLayout>
>>>>>>> 71c2c6fd7b97cdbb1dec2e80381bbbd44f0e14c9
